[package]
name = "purple_rain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"
pixels = "0.9.0"
rand = "0.8.5"
timer = "0.2.0"
winit = "0.26.1"
winit_input_helper = "0.12.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benches"
harness = false
